# ha-external-connector

./: .eslintrc.json  .gitignore  .markdownlint.json  .stylelintrc.json  CHANGELOG.md  CONFIGURATION_STANDARDIZATION_SUMMARY.md  DEVELOPMENT_WORKFLOW_GUIDE.md  FUTURE_ROADMAP.md  HACS_CLEAN_STRUCTURE_SUMMARY.md  HACS_OPTIMIZED_STRUCTURE_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_SRC_TO_DEVELOPMENT_SUMMARY.md  Makefile  PHASE2_MIGRATION_ANALYSIS.md  PHASE2_MIGRATION_COMPLETE.md  PHASE2_MIGRATION_FINAL.md  PHASE2_MIGRATION_PLAN.md  PROJECT_COMPLETE_HACS_READY.md  PROJECT_STATUS_SUMMARY.md  PYTHON_MIGRATION_ACTION_PLAN.md  README.md  SESSION_SUMMARY_CONFIG_MANAGER_FIX.md  code_quality_detailed_report.txt  code_quality_tests_report.txt  eslint.config.js  final_test_report.txt  full_automation_gaps.md  ha-external-connector.code-workspace  hacs.json  oauth_baseline_request.json  oauth_baseline_response.json  oauth_invalid_secret_test.json  oauth_malformed_request_test.json  oauth_missing_secret_test.json  oauth_performance_benchmark.json  oauth_token_exchange_request.json  package-lock.json  package.json  pyproject.toml  quality_analysis.txt  (+11 more)
.github/: PROJECT_STANDARDS.md  copilot-instructions.md
.github/instructions/: README.md  aws-patterns.instructions.md  documentation-patterns.instructions.md  lambda-functions-patterns.instructions.md
.github/instructions/core/: agent-refresh.md  environment-setup.md  quality-standards.md
.github/instructions/documentation/: docs-organization.md  markdown-standards.md
.github/instructions/specialized/: aws-patterns.md  lambda-patterns.md  security-patterns.md  testing-patterns.md
.github/workflows/: code-quality.yml
custom_components/ha_external_connector/: __init__.py  browser_mod_lwa_assistant.py  browser_mod_lwa_demo.py  config_flow.py  const.py  manifest.json  models.py  services.py  services.yaml
custom_components/ha_external_connector/integrations/: TEMPLATE_config_flow.py  TEMPLATE_services.py
development/: __init__.py  compatibility.py  decision_engine.py  discovery.py  execution.py  matching.py  validation.py
development/alexa_automation_scripts/: amazon_developer_console.py  browser_automation.py  console_automation.py  lwa_security_profile_automation.py  skill_automation_manager.py  skill_definition_manager.py  smapi_automation_enhancer.py  smapi_setup_wizard.py  smapi_token_helper.py
development/cli/: amazon_developer_console.py  commands.py
development/core_utilities/: __init__.py  __main__.py  cloudflare_helpers.py  constants.py  lambda_validator.py  models.py  policy_validator.py  scenarios.py  selection_manager.py
development/demos/: demo_tokens.json
development/deployment_tools/: integration_installer.py  service_installer.py
development/infrastructure/: README.md
development/scripts/: README.md  __init__.py  agent_helper.py  code_quality.py  demo_lwa_automation.py  demo_security.py  demo_smapi_integration.py  hacs_restructure_summary.py  setup_local_ha_testing.py  test_hacs_integration.py  update_dependencies.sh
development/utils/: __init__.py  cloudflare_helpers.py  manager.py  selection_manager.py
development/web_api/: __init__.py  amazon_console.py
development/web_api/api/: __init__.py  alexa.py  (+3 more)
docs/: DOCUMENTATION_REORGANIZATION_SUMMARY.md  README.md  phase1_5_complete.md
docs/api/: security_validation_api.md
docs/architecture/: ARCHITECTURE_THOUGHTS.md  README.md  UTILS_ARCHITECTURE_STANDARDS.md
docs/deployment/: DEPLOYMENT_QUICK_REFERENCE.md  HACS_PUBLISHING_REQUIREMENTS.md  TROUBLESHOOTING.md
docs/deployment-strategy/: README.md
docs/development/: AUTOMATION_SETUP.md  BROWSER_MOD_INTEGRATION_BREAKTHROUGH.md  CODE_QUALITY_SUITE.md  CONFIGURATION_MANAGEMENT.md  CONFIGURATION_SETUP_WIZARD_SPEC.md  CONFIGURATION_STANDARDIZATION_PLAN.md  ENVIRONMENT_STATUS.md  LAMBDA_DEPLOYMENT_MARKERS.md  LOCAL_TESTING_SETUP.md  LWA_SECURITY_PROFILE_AUTOMATION.md  ROADMAP.md  SETUP_GUIDE.md  UTILS_ARCHITECTURE_STANDARDS.md
docs/guides/: security_validation_guide.md
docs/hacs-publication/: HACS_PUBLISHING_REQUIREMENTS.md
docs/history/: ARCHITECTURE_EVOLUTION.md  AUTOMATION_GAPS_ANALYSIS.md  HACS_OPTIMIZED_STRUCTURE_COMPLETE.md  MARKDOWN_CLEANUP_COMPLETE.md  PHASE_6_COMPLETE.md
docs/integration-framework/: README.md
docs/project-overview/: DEVELOPMENT_SPECIFICATION.md  DEVELOPMENT_SPECIFICATION_RATIONALIZATION.md  README.md  STRATEGIC_PLAN.html
docs/quality-standards/: README.md
docs/technology-stack/: README.md
infrastructure/deployment/: oauth_gateway.py  smart_home_bridge.py
scripts/: README.md  agent_helper.py  code_quality.py  demo_security.py  deploy_shared_config.py  dev_environment_summary.sh  ha_core_exclusions_summary.sh  refactor_oauth_gateway_references.py  run_web_dev.py  setup_browser_mod_dev.sh  setup_ha_dev.py  test_ha_dev_env.py  test_ha_imports.py  validate_enhanced_lambda_markers.py  validate_ha_core_exclusions.sh  validate_instructions.py  validate_lambda_markers.py
scripts/lambda_deployment/: README.md  __init__.py  aws_deployment_handler.py  cli.py  deployment_manager.py  deployment_manager_original.py  import_manager.py  marker_system.py  marker_validator.py  migrate_deployment_system.py  test_new_system.py  validation_system.py
src/aws/: cloudflare_oauth_gateway.py  security_constants.py  voice_command_bridge.py
src/ha_connector/: __init__.py  py.typed  utils.py
tests/: conftest.py  linter_order.txt  test_lambda_deployment.py  test_lambda_deployment_integration.py  test_secrets.py  test_utils.py
tests/fixtures/: __init__.py  aws_fixtures.py  aws_test_framework.py  cloudflare_fixtures.py  test_secrets.py
tests/integration/: __init__.py  test_integration.py  test_smapi_token_helper_ux.py
tests/unit/: __init__.py  test_aws_adapters.py  test_aws_framework.py  test_aws_resource_manager.py  test_cli_commands.py  test_cloudflare_adapters.py  test_cloudflare_framework.py  test_cloudflare_manager.py  test_cloudflare_specs.py  test_config.py  test_deployment.py  test_lambda_security_validator.py
tests/validation/: README.md  __init__.py
(+117 files in other folders)
