[tool.flake8]
max-line-length = 88
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ha-external-connector"
version = "0.1.0"
description = "Home Assistant External Connector - Python Implementation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ha_connector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
httpx = "^0.25.0"
boto3 = "^1.34.0"
boto3-stubs = {extras = ["ssm"], version = "^1.34.0"}
mypy-boto3-ssm = "^1.39.9"
structlog = "^23.2.0"
rich = "^13.7.0"
typer = "^0.9.0"
asyncio-throttle = "^1.0.2"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^6.0.0"
mypy = "^1.8.0"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"
bandit = "^1.7.0"
safety = "^2.3.0"
invoke = "^2.2.0"
vulture = "^2.10.0"
pip-audit = "^2.6.0"
pylint-pydantic = "^0.3.5"

[tool.poetry.scripts]
ha-connector = "ha_connector.cli.main:app"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    ".coveragerc",
    ".venv/",
    "build/",
    "dist/",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests", "scripts"]
exclude = [
    ".coveragerc",
    ".venv",
    "build",
    "dist",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.pytest_cache",
]
reportMissingImports = "none"  # Align with mypy's ignore-missing-imports behavior
reportMissingTypeStubs = "none"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportGeneralTypeIssues = "error"
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportDuplicateImport = "warning"
reportWildcardImportFromLibrary = "error"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
# files
| \.coveragerc
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "aws: marks tests that require AWS credentials",
    "cloudflare: marks tests that require CloudFlare credentials",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
    ".venv/*",
    "venv/*",
    "env/*",
    "ENV/*",
    "*.egg-info/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.bandit]
exclude_dirs = ["tests",]
skips = ["B101", "B601"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".coveragerc",
]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "W"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "UP", "SIM", "I", "W"]
unfixable = []

# === RUFF / PYLINT / FLAKE8 RULE MAPPING ===
# Verified 1:1 mappings where Ruff handles rules more efficiently:
#
# PYLINT DELEGATIONS:
# - line-too-long (R0301) → Ruff E501 (with auto-fix capability)
# - unused-import (W0611) → Ruff F401 (more precise detection)
# - undefined-variable (F821) → Ruff F821 (faster execution)
#
# FLAKE8 DELEGATIONS:
# - All E-family (pycodestyle errors) → Ruff E*** (with auto-fix)
# - All W-family (pycodestyle warnings) → Ruff W*** (with auto-fix)
# - All F-family (Pyflakes) → Ruff F*** (faster execution)
# - Import sorting → Ruff I*** (can potentially replace isort)
#
# PERFORMANCE BENEFITS:
# - Ruff processes these rules ~10-100x faster than individual tools
# - Auto-fix capability eliminates manual remediation
# - Single tool execution vs multiple tool chain
#
# FUTURE CONSIDERATIONS:
# - PL family (Pylint rules in Ruff) - Not yet fully mature
# - Consider replacing isort entirely with Ruff I family
# - Consider removing Flake8 entirely (E/W/F families fully covered by Ruff)
# - Monitor Ruff development for duplicate-code detection

[tool.pylint.main]
load-plugins = ["pylint_pydantic"]
init-hook = "import sys; sys.path.append('.')"

[tool.pylint.messages_control]
# PHILOSOPHY: Enable all checks by default, disable only with specific justification
# Prefer per-file disables over global ones when possible
disable = [
    # === DEFERRED TO RUFF (More performant, better fixes) ===
    "line-too-long",        # R0301: Ruff E501 handles this more efficiently with auto-fix
    "unused-import",        # W0611: Ruff F401 provides more precise detection
    "undefined-variable",   # E0602: Ruff F821 provides faster execution
    "trailing-whitespace",  # C0303: Ruff W291 handles with auto-fix
    "missing-final-newline", # C0304: Ruff W292 handles with auto-fix

    # === DOCUMENTATION STYLE (Consider enabling these in future) ===
    # These could be re-enabled once comprehensive docstring guidelines are established
    "missing-module-docstring",   # C0114: TODO: Enable after docstring style guide
    "missing-class-docstring",    # C0115: TODO: Enable after docstring style guide
    "missing-function-docstring", # C0116: TODO: Enable after docstring style guide

    # === DESIGN PATTERNS (Project-specific decisions) ===
    "too-few-public-methods",     # R0903: Acceptable for data classes and simple interfaces

    # === FILE-SPECIFIC OVERRIDES (Document per-file exceptions below) ===
    # Per-file overrides should be documented here for transparency:
    # - voice_command_bridge.py: "too-many-lines" (intentionally verbose for non-technical documentation)
    # - cloudflare_oauth_gateway.py: "too-many-lines" (OAuth gateway with comprehensive security features)
    # - Future files with specific needs should be listed here
]

[tool.pylint.format]
max-line-length = 88

[tool.vulture]
min_confidence = 80
paths = ["src/"]
exclude = ["*test*", "*__pycache__*"]
ignore_decorators = ["@pytest.fixture", "@click.command", "@typer.command", "@classmethod", "@staticmethod"]
ignore_names = [
    "_*",
    "test_*",
    "cls",           # Pydantic classmethod parameter
    "exc_type",      # Exception handling variables
    "exc_value",
    "exc_val",
    "exc_tb",
    "traceback"
]
